# electro_store

./: README.md  file.csv  main.py
project-poetry/: pyproject.toml
tests/: conftest.py  test_utils.py
