[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["alex <drofa528@bk.ru>"]
readme = "README.md"
packages = [{include = "project_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
